--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <div class="warning"></div>
                 <div class="city-name-des">Enter a city Name</div>
                 <input class="search-input" type="text" placeholder="Eg. Monrovia, Caldwell, Sinkor">
+                <input class="Country-code" type="text" placeholder="Eg. LR. US, ">
                 <button class="search-btn">Search</button>
 
                 <div class="option-wrapper">
@@ -41,7 +42,7 @@
 
             <main class="middle-left-section">
                 <div class="weather-result">
-                    <div class="city-name">Monrovia (2024-6-7)</div>
+                    <div class="city-name">City:</div>
                     <div class="tempurature">Temperature: </div>
                     <div class="wind">wind: </div>
                     <div class="humidity">Humidity:</div>
